changed the background color

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,9 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-color: hsl(30, 38%, 92%); */
+  background-color: hsl(30, 38%, 92%);
   font-size: 14px;
-  background-color: black;
+  
 }
 
 .container {
